[workspace]
members = [
    "crates/buffered-fs",
    "crates/common",
    "crates/dependency-analyzer",
    "crates/errors",
    "crates/extract-graphql",
    "crates/fixture-tests",
    "crates/graphql-ir",
    "crates/graphql-syntax",
    "crates/graphql-text-printer",
    "crates/graphql-transforms",
    "crates/interner",
    "crates/persist-query",
    "crates/relay-codegen",
    "crates/relay-compiler",
    "crates/relay-lsp",
    "crates/relay-typegen",
    "crates/schema",
    "crates/schema-diff",
    "crates/schema-print",
    "crates/signedsource",
    "crates/test-schema",
]
