[workspace]
members = [
    "crates/common",
    "crates/dependency-analyzer",
    "crates/errors",
    "crates/extract-graphql",
    "crates/fixture-tests",
    "crates/graphql-ir",
    "crates/graphql-syntax",
    "crates/graphql-test-helpers",
    "crates/graphql-text-printer",
    "crates/interner",
    "crates/persist-query",
    "crates/relay-codegen",
    "crates/relay-compiler-neon/native",
    "crates/relay-compiler-wasm",
    "crates/relay-compiler",
    "crates/relay-lsp",
    "crates/relay-transforms",
    "crates/relay-typegen",
    "crates/schema-print",
    "crates/schema",
    "crates/signedsource",
    "crates/test-schema",
]
