[workspace]
members = [
    "crates/common",
    "crates/dependency-analyzer",
    "crates/errors",
    "crates/extract-graphql",
    "crates/fixture-tests",
    "crates/graphql-cli",
    "crates/graphql-ir",
    "crates/graphql-syntax",
    "crates/graphql-test-helpers",
    "crates/graphql-text-printer",
    "crates/graphql-watchman",
    "crates/interner",
    "crates/js-config-loader",
    "crates/persist-query",
    "crates/relay-codegen",
    "crates/relay-compiler",
    "crates/relay-lsp",
    "crates/relay-schema",
    "crates/relay-test-schema",
    "crates/relay-transforms",
    "crates/relay-typegen",
    "crates/schema",
    "crates/schema-diff",
    "crates/schema-documentation",
    "crates/schema-flatbuffer",
    "crates/schema-print",
    "crates/schema-validate",
    "crates/signedsource",
]
