# @generated
# @autocargo from //relay/oss/crates/buffered-fs:buffered-fs
# Signature<<a47d726d717fc31233998ec4103ceb29fce5a6a2>>
[package]
name = "buffered-fs"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "Apache 2.0"
include = ["src/**/*.rs"]
# @end of Signature<<a47d726d717fc31233998ec4103ceb29fce5a6a2>>
