# @generated
# @autocargo from //relay/oss/crates/buffered-fs:buffered-fs
# Signature<<95b51f9ed6c7e34be10e46be27685fd677aa5738>>
[package]
name = "buffered-fs"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]
# @end of Signature<<95b51f9ed6c7e34be10e46be27685fd677aa5738>>
