# @generated
# @autocargo from //relay/oss/crates/common:common
# Signature<<21974130dacf4de1593f43b7d5c8f205194c5432>>
[package]
name = "common"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
interner = { path = "../interner" }
colored = "1.9"
# @end of Signature<<21974130dacf4de1593f43b7d5c8f205194c5432>>
