[project]
name = "dependency-analyzer"
version = "0.0.0"
edition = "2018"

[dependencies]
fnv = "1.0.6"
interner = { path = "../interner" }
graphql-ir = { path = "../graphql-ir" }
graphql-syntax = { path = "../graphql-syntax" }

[dev-dependencies]
common = { path = "../common" }
fixture-tests = { path = "../fixture-tests" }
schema = { path = "../schema" }
test-schema = { path = "../test-schema" }
