# @generated
# @autocargo from //relay/oss/crates/errors:errors
# Signature<<290f110b5ce6da93b479dfe2ec29643c4be89414>>
[package]
name = "errors"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
rayon = "1.2"
# @end of Signature<<290f110b5ce6da93b479dfe2ec29643c4be89414>>
