# @generated
# @autocargo from //relay/oss/crates/extract-graphql:[extract-graphql,extract-graphql-test]
# Signature<<6b19eccc22151ee8351c0a4db4b4ac0d32376430>>
[package]
name = "extract-graphql"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs", "tests/**/*.rs", "tests/**/fixtures/*"]

[lib]
path = "src/lib.rs"

[[test]]
name = "extract_graphql_test"
path = "tests/extract_test.rs"

[dependencies]
interner = { path = "../interner" }

[dev-dependencies]
fixture-tests = { path = "../fixture-tests" }
# @end of Signature<<6b19eccc22151ee8351c0a4db4b4ac0d32376430>>
