[project]
name = "graphql-finder-watchman"
version = "0.0.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
extract-graphql = { path = "../extract-graphql" }
interner = { path = "../interner" }
rayon = "1.3.0"
relay-compiler = { path = "../relay-compiler" }
serde = { version = "1.0.104", features = ["derive"] }
serde_bser = "0.2.0"
serde_json = "1.0.45"
thiserror = "1.0.9"
tokio = "0.2"
watchman_client = "0.4.0"
