# @generated
# @autocargo from //relay/oss/crates/graphql-ir:[graphql-ir,graphql-ir_test,graphql-ir_test_with_extensions]
# Signature<<f5c1dff945fe20da606d84a09a4f34e6b4fa7b50>>
[package]
name = "graphql-ir"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "Apache 2.0"
include = ["src/**/*.rs", "tests/**/*.rs", "tests/**/fixtures/*"]

[lib]
path = "src/lib.rs"

[[test]]
name = "graphql_ir_test"
path = "tests/parse_test.rs"

[[test]]
name = "graphql_ir_test_with_extensions"
path = "tests/parse_with_extensions_test.rs"

[dependencies]
common = { path = "../common" }
errors = { path = "../errors" }
graphql-syntax = { path = "../graphql-syntax" }
interner = { path = "../interner" }
schema = { path = "../schema" }
fnv = "1.0"
lazy_static = "1.0"
thiserror = "1.0"

[dev-dependencies]
fixture-tests = { path = "../fixture-tests" }
test-schema = { path = "../test-schema" }
# @end of Signature<<f5c1dff945fe20da606d84a09a4f34e6b4fa7b50>>
