# @generated
# @autocargo from //relay/oss/crates/graphql-ir:[graphql-ir,graphql-ir_test,graphql-ir_test_with_extensions]
# Signature<<70bf085846b9140eda6341f096f640893d159175>>
[package]
name = "graphql-ir"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs", "tests/**/*.rs", "tests/**/fixtures/*"]

[lib]
path = "src/lib.rs"

[[test]]
name = "graphql_ir_test"
path = "tests/parse_test.rs"

[[test]]
name = "graphql_ir_test_with_extensions"
path = "tests/parse_with_extensions_test.rs"

[dependencies]
common = { path = "../common" }
errors = { path = "../errors" }
graphql-syntax = { path = "../graphql-syntax" }
interner = { path = "../interner" }
schema = { path = "../schema" }
fnv = "1.0"
lazy_static = "1.0"
thiserror = "1.0"

[dev-dependencies]
fixture-tests = { path = "../fixture-tests" }
test-schema = { path = "../test-schema" }
# @end of Signature<<70bf085846b9140eda6341f096f640893d159175>>
