# @generated
# @autocargo from //relay/oss/crates/graphql-syntax:[graphql-syntax,graphql-syntax_test]
# Signature<<f2eed0506590937c32a1c7b564384a3eed11f91c>>
[package]
name = "graphql-syntax"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs", "tests/**/*.rs", "tests/**/fixtures/*"]

[lib]
path = "src/lib.rs"

[[test]]
name = "graphql_syntax_test"
path = "tests/parse_test.rs"

[dependencies]
common = { path = "../common" }
interner = { path = "../interner" }
thiserror = "1.0"

[dev-dependencies]
fixture-tests = { path = "../fixture-tests" }
# @end of Signature<<f2eed0506590937c32a1c7b564384a3eed11f91c>>
