[project]
name = "graphql-transforms"
version = "0.0.0"
edition = "2018"

[dependencies]
common = { path = "../common" }
interner = { path = "../interner" }
graphql-ir = { path = "../graphql-ir" }
schema = { path = "../schema" }
graphql-printer = { path = "../graphql-printer" }

[dev-dependencies]
criterion = "0.3"
fixture-tests = { path = "../fixture-tests" }
graphql-syntax = { path = "../graphql-syntax" }
test-schema = { path = "../test-schema" }

[[bench]]
name = "transforms"
harness = false
