[package]
name = "js-config-loader"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1.0"
