# @generated
# @autocargo from //relay/oss/crates/persist-query:persist-query
# Signature<<9540e3c976d2587fccbcb33ed0d3ceb463c59bd5>>
[package]
name = "persist-query"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "Apache 2.0"
include = ["src/**/*.rs"]

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.1.0"
# @end of Signature<<9540e3c976d2587fccbcb33ed0d3ceb463c59bd5>>
