# @generated
# @autocargo from //relay/oss/crates/persist-query:persist-query
# Signature<<f0bd207708c757732f3dd2c0ee6e9aeeeadb214a>>
[package]
name = "persist-query"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
hyper = "0.13"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.1.0"
# @end of Signature<<f0bd207708c757732f3dd2c0ee6e9aeeeadb214a>>
