[package]
name = "relay-compiler-playground"
version = "0.0.3"
authors = ["Facebook"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
graphql-ir = { path = "../graphql-ir" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-text-printer = { path = "../graphql-text-printer" }
relay-codegen = { path = "../relay-codegen" }
relay-typegen = { path = "../relay-typegen" }
relay-schema = { path = "../relay-schema" }
relay-transforms = { path = "../relay-transforms" }
common = { path = "../common" }
intern = { path = "../intern" }
fnv = "1.0"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip"] }
schema = { path = "../schema" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
