[package]
name = "relay-compiler-wasm"
version = "0.1.0"
authors = ["Facebook"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.64"
web-sys = { version = "0.3.41", features = ['console'] }
console_error_panic_hook = "0.1.6"
schema = { path = "../schema" }
graphql-syntax = { path = "../graphql-syntax" }
common = { path = "../common" }
graphql-ir = { path = "../graphql-ir" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
