# @generated
# @autocargo from //relay/oss/crates/relay-compiler:relay-compiler
# Signature<<561ea975622085e39b9036bd02ae622d4ef06037>>
[package]
name = "relay-compiler"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
common = { path = "../common" }
dependency-analyzer = { path = "../dependency-analyzer" }
errors = { path = "../errors" }
extract-graphql = { path = "../extract-graphql" }
facebook_crates_watchman_rust_watchman_client__watchman_client = { path = "../../../../.cargo/facebook-crates/watchman/rust/watchman_client/:watchman_client" }
graphql-ir = { path = "../graphql-ir" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-text-printer = { path = "../graphql-text-printer" }
graphql-transforms = { path = "../graphql-transforms" }
interner = { path = "../interner" }
persist-query = { path = "../persist-query" }
relay-codegen = { path = "../relay-codegen" }
schema = { path = "../schema" }
signedsource = { path = "../signedsource" }
fnv = "1.0"
rayon = "1.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
thiserror = "1.0"
# @end of Signature<<561ea975622085e39b9036bd02ae622d4ef06037>>
