[package]
name = "relay-config-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemars = { version="0.8.11" }
relay-compiler = {  path = "../relay-compiler" }
serde_json = { version = "1.0.79" }
