# @generated
# @autocargo from //relay/oss/crates/schema-diff:schema-diff
# Signature<<d4d2e4326f4ac514f0391299bc35bffe38537b54>>
[package]
name = "schema-diff"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
interner = { path = "../interner" }
schema = { path = "../schema" }
fnv = "1.0"
lazy_static = "1.0"
# @end of Signature<<d4d2e4326f4ac514f0391299bc35bffe38537b54>>
