# @generated
# @autocargo from //relay/oss/crates/schema:[schema,schema_test]
# Signature<<c0064c0bdc9742f2099a1ce7c7a01612cda72453>>
[package]
name = "schema"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.graphql", "src/**/*.rs", "tests/**/*.rs", "tests/**/fixtures/*"]

[lib]
path = "src/lib.rs"

[[test]]
name = "schema_test"
path = "tests/build_schema_test.rs"

[dependencies]
interner = { path = "../interner" }
thiserror = "1.0"

[dev-dependencies]
fixture-tests = { path = "../fixture-tests" }
# @end of Signature<<c0064c0bdc9742f2099a1ce7c7a01612cda72453>>
