# @generated
# @autocargo from //relay/oss/crates/signedsource:signedsource
# Signature<<b5298de5cb6f16150d9f3203ae06ece05c763945>>
[package]
name = "signedsource"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
lazy_static = "1.0"
regex = "1.0"
rust-crypto = "0.2"
# @end of Signature<<b5298de5cb6f16150d9f3203ae06ece05c763945>>
