# @generated
# @autocargo from //relay/oss/crates/signedsource:signedsource
# Signature<<9c224bcd56c45d6b149d7400e69d4203f0cb33ec>>
[package]
name = "signedsource"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.rs"]

[dependencies]
hex = "0.4"
lazy_static = "1.0"
md-5 = "0.8"
regex = "1.0"
# @end of Signature<<9c224bcd56c45d6b149d7400e69d4203f0cb33ec>>
