# @generated
# @autocargo from //relay/oss/crates/test-schema:test-schema
# Signature<<f4c30e3356bf94b39d8642e3912c6a4952244944>>
[package]
name = "test-schema"
edition = "2018"
version = "0.0.0"
authors = ['Facebook']
license = "MIT"
include = ["src/**/*.graphql", "src/**/*.rs"]

[dependencies]
schema = { path = "../schema" }
lazy_static = "1.0"
# @end of Signature<<f4c30e3356bf94b39d8642e3912c6a4952244944>>
